# vs_python_client

./: README.md  pyproject.toml
python_provider/: cli.py  main.py  websocket_client.py
tests/: test_main.py
